--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.4
 dj-database-url==0.5.0
 Django==3.2.4
+django-model-utils==4.1.1
 django-stdimage==5.3.0
 Pillow==8.2.0
 python-decouple==3.4
