--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.3.4
 dj-database-url==0.5.0
 Django==3.2.4
+django-autoslug==1.9.8
 django-model-utils==4.1.1
 django-stdimage==5.3.0
+gunicorn==20.1.0
 Pillow==8.2.0
 python-decouple==3.4
 pytz==2021.1
