--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.2.4
 django-autoslug==1.9.8
 django-model-utils==4.1.1
 django-stdimage==5.3.0
+django-widget-tweaks==1.4.8
 gunicorn==20.1.0
 Pillow==8.2.0
 python-decouple==3.4
