--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.4
 dj-database-url==0.5.0
 Django==3.2.4
 django-autoslug==1.9.8
+django-crispy-forms==1.12.0
 django-model-utils==4.1.1
 django-stdimage==5.3.0
 django-widget-tweaks==1.4.8
